cmake_minimum_required(VERSION 3.16)
project(LeetCode2022)

set(CMAKE_CXX_STANDARD 14)

#set(SOURCE_FILES main.cpp 1. 两数之和.cpp 2. 两数相加.cpp 521. 最长特殊序列 Ⅰ.cpp)

add_executable(main main.cpp)
add_executable(1.sum_of_two_numbers 1.sum_of_two_numbers.cpp)
add_executable(2.two_together 2.two_together.cpp)
add_executable(521.Longest_special_sequence_one 521.Longest_special_sequence_one.cpp)