cmake_minimum_required(VERSION 3.16)
project(LeetCode2022)

set(CMAKE_CXX_STANDARD 14)

#set(SOURCE_FILES main.cpp 1. 两数之和.cpp 2. 两数相加.cpp 521. 最长特殊序列 Ⅰ.cpp)

add_executable(main main.cpp)
add_executable(1.sum_of_two_numbers 1.sum_of_two_numbers.cpp)
add_executable(2.two_together 2.two_together.cpp)
add_executable(521.Longest_special_sequence_one 521.Longest_special_sequence_one.cpp)
add_executable(3.the_oldest_string_without_repeating_characters 3.the_oldest_string_without_repeating_characters.cpp)
add_executable(2100.a_good_day_to_rob_a_bank 2100.a_good_day_to_rob_a_bank.cpp)
add_executable(504.seven_base_numbers 504.seven_base_numbers.cpp)
add_executable(4.find_the_median_of_two_positive_ordinal_groups 4.find_the_median_of_two_positive_ordinal_groups.cpp)
add_executable(88.merge_two_ordered_arrays 88.merge_two_ordered_arrays.cpp)
add_executable(2055.plates_between_candles 2055.plates_between_candles.cpp)